# neuro_op

./: .gitignore  README.md  environment.yml  environment_exact.yml  pyproject.toml
Archive/Gaussian-mixture/: Manifest.toml  Project.toml
Archive/n_op/: Analysis-Amor.ipynb  Analysis-KLD.ipynb  Analysis-N1.ipynb  PPD-Model-Check.ipynb  TO-BE-CLEANED-Old-Notebook.ipynb
neuro_op/: __init__.py  neuro_op.py
notebooks/: @MA-t_exec.ipynb  @MA0-nn.ipynb  @MA1-First-Builder N1.ipynb  @MA1-First-Builder.ipynb  @MA1-First-Builder_N1.ipynb  @MA4-N150r.ipynb  @MA4-N2r.ipynb  @MA5-ActInf.ipynb  Analysis-Amor.ipynb  Analysis-Class-Consistency.ipynb  Analysis-KLD.ipynb  Analysis-N1-ClosedCasino.ipynb  Analysis-N1.ipynb  Base-Model.ipynb  ConjMu-Analysis.ipynb  Figures1-1-runtime.ipynb  Figures1-2-distances.ipynb  Figures1-3-rates.ipynb  Getting-Started.ipynb  Julia-Rewrite  PPD-Model-Check.ipynb  TO-BE-CLEANED-Old-Notebook.ipynb  Test.ipynb  Testground.ipynb  Testing.ipynb  Testing_Class_Consistency.ipynb  Testing_ConjMu.ipynb  Testing_Grid.ipynb  Testing_GridMu.ipynb  Testing_grid.ipynb  Testing_param.ipynb  Vanilla-figures.ipynb  Vanilla-model.ipynb  notebook.jl  test.h5
src/neuro_op/: Prone--neuro_op.py  __init__.py  classes.py  deprecated.py  hdf5_utils.py  inputs.py  measures.py  (+5 more)
src/neuro_op.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
testing/: err.txt  howto-cluster.md  howto-cluster.txt  lab_book.md  log.txt  nohup.out  python-ssh-runner.sh  qsub_template.sh  testruns.py
testing_ground/: err.txt
tests/: err.txt  python-ssh-runner.sh  testruns.py
(+95 files in other folders)
